fix customer review spacing

--- a/style.css
+++ b/style.css
@@ -429,7 +429,7 @@ section > .inner-section {
 
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
 }
 .section-customers .customer-review .text {
   margin-top: calc(var(--customer-head-size) / 2);
